2002-07-13  Zoran Vasiljevic <zoran@archiware.com>  

	* doc/man:
	* doc/html: added two directories with TMML generated files
	* doc/thread.tmml: fixed for the final 2.4 release
	* Makefile.in: updated install-doc target to look for man files
	under doc/man instead only under doc directory

2002-07-12  Zoran Vasiljevic <zoran@archiware.com>  

	* generic/threadSvCmd.s: fixed handling of string rep
	in shared var object duplicator

2002-07-09  Zoran Vasiljevic <zoran@archiware.com>  
	* README: added this file
 	* license.terms: added this file

2002-07-05  Zoran Vasiljevic <zoran@archiware.com>  

        * tclconfig/tcl.m4: fixed reference to MINGW so we can
	compile w/o MSVC under windows. 

2002-07-03  Zoran Vasiljevic <zoran@archiware.com>  

	* generic/threadSvCmd.c: simplified object duplicator

2002-06-17  Zoran Vasiljevic <zoran@archiware.com>  

	* generic/threadCmd.c: cleanup of some unused variables
	* generic/threadSvCmd.c:
	* generic/ThreadSpCmd.c:
	* generic/threadSvList.c: added CONST qualifiers to avoid warnings
	when compiling against 8.4 core. 

2002-05-25  Zoran Vasiljevic <zoran@archiware.com>  
	* generic/threadCmd.c: added some typecasts to satisfy Windows 
	* generic/threadSvCmd.h: added some typecasts to satisfy Windows 

2002-05-04  Zoran Vasiljevic <zoran@archiware.com>  
	* generic/threadSvCmd.c: removed errant reference to (still not)
	supported shared dictionary and shared keylist datatypes.

2002-04-27  Zoran Vasiljevic <zoran@archiware.com>  

	* generic/threadCmd.c: fixed processing of -eventmark. We now
	properly wait for target thread to catch up with processing events.

2002-04-07  Zoran Vasiljevic <zoran@archiware.com>  

	* generic/threadCmd.c: added call to Ns_TclMarkForDelete(interp)
	when compiled for AOLserver support, otherwise we were leaking std
	channels on thread exit.

2002-04-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: improved use of DESTDIR in install targets.
	Removed need for installdirs target.